--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">android_review</string>
+    <string name="mainReview">전체</string>
+    <string name="favoriteReview">즐겨찾기</string>
 </resources>
