네이밍 review -> room 으로 변경, 리스트 아이템 구현, api 연결 진행

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">android_review</string>
-    <string name="mainReview">전체</string>
-    <string name="favoriteReview">즐겨찾기</string>
+    <string name="mainRoom">전체</string>
+    <string name="favoriteRoom">즐겨찾기</string>
+
+    <string name="rate">%d</string>
+    <string name="price">%d원</string>
+
 </resources>
